[package]
name = "embassy-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

defmt = "=0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6" , features = ["inline-asm"]}
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version ="0.1.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] } #, git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0" , features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0" , features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.2.0", features = ["defmt"] }

[patch.crates-io]
# 20/04/2023 commit = fb27594b2eb2cca2aea25dd92a7b730c185b6ecc
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-cortex-m = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc" }

[profile.release]
debug = true